Fixed some issues with CSS on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,7 +33,6 @@
 	padding-top: 20px;
 	padding-bottom: 20px;
 	width: 100%;
-	height: 100px;
 	background-color: #262626;	
 	border-top: 1px solid rgba(0,0,0,0.2);
 	display: flex;
