--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -134,3 +134,9 @@
 	border-radius: 50%;
 	background: white;
 }
+
+@media only screen and (max-width: 650px) {
+	.game-options-container {
+		width: 75%;
+	}
+}
